add japanese-shoyu-ramen.html + update steps spaghetti+meatballs.html

--- a/recipes/spaghetti-meatballs.html
+++ b/recipes/spaghetti-meatballs.html
@@ -29,3 +29,16 @@
                 <li>1 (16 ounce) package spaghetti </li>
             </ul>
 <h3>Steps</h3>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+        <li>Combine tomatoes, tomato juice, tomato paste, onion, parsley, salt, red pepper flakes, black pepper, thyme, and cloves in a large pot. 
+            Bring to a boil over high heat; reduce heat to low and let simmer for 1 to 1 1/2 hours.</li>
+        <li>Meanwhile, combine beef, crackers, eggs, Parmesan cheese, garlic, parsley, and thyme in a bowl. 
+            Form into large meatballs and place into a broiler pan.</li>
+        <li>Bake in the preheated oven until browned and no 
+            longer pink in the centers, about 30 minutes.</li>
+        <li>Transfer meatballs to sauce and continue to simmer, 2 to 2 1/2 hours more.</li>
+        <li>Bring a large pot of lightly salted water to a boil. 
+            Cook spaghetti in the boiling water, stirring occasionally, until tender yet firm to the bite, about 12 minutes. Drain.</li>
+        <li>Serve sauce and meatballs over cooked spaghetti.</li>
+    </ol>
