--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/rosemary-steak.html">Rosemary Steak</a>
-    
+        <ul>
+            <li><a href="recipes/rosemary-steak.html">Rosemary Steak</a></li>
+            <li><a href="recipes/spaghetti-meatballs.html">Homemade Spaghetti with Meatballs</a></li>
+            <li><a href="recipes/japanese-shoyu-ramen.html">Japanese Slow Cooker Shoyu Ramen</a></li>
+    </ul>
 </body>
 </html>
