--- a/recipes/japanese-shoyu-ramen.html
+++ b/recipes/japanese-shoyu-ramen.html
@@ -1,1 +1,41 @@
 <h1>Japanese Slow Cooker Shoyu Ramen</h1>
+    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fangsarap.net%2Fwp-content%2Fuploads%2F2014%2F09%2FShoyu-Ramen-Wide.jpg&f=1&nofb=1" alt="bowl-of-japanese-shoyu-ramen">
+<h3>Description</h3>
+    <p>This clear broth seasoned with soy sauce seems very simplistic, but it belies the intense umami flavor within the soup. 
+        We use chicken and 4 types of dried seafood to create an incredibly savory broth that is seasoned with a soy sauce tare that gives the broth a bit of sweetness and wonderful complexity. 
+        The best thing about this recipe is that we use a pressure cooker that not only helps extract all the flavor very quickly but also creates a beautifully clear broth. </p>
+<h3>Ingredients</h3>
+        <h4>Broth:</h4>
+            <ul>
+                <li>1 (2 1/2 pound) whole chicken, cut into pieces </li>
+                <li>1 cup dried scallops </li>
+                <li>1 cup dried anchovies </li>
+                <li>¼ cup dried shrimp </li>
+                <li>¼ cup bonito flakes</li>
+                <li>1 (1 inch) piece ginger, thinly slices, divided </li>
+                <li>1 (4 inch) piece dashi kombu (dried kelp) </li>
+                <li>3 quarts water </li>
+            </ul>
+        <h4>Tare Sauce:</h4>
+            <ul>
+                <li>1 cup soy sauce </li>
+                <li>½ cup mirin </li>
+                <li>½ cup sake </li>
+                <li>8 green onions </li>
+                <li>½ cup bonito flakes </li>
+                <li>¼ cup white sugar </li>
+                <li>8 cloves garlic, crushed </li>
+                <li>1 (4 inch) piece dashi kombu (dried kelp) </li>
+                <li>6 (3 ounce) packages cooked ramen noodles, or to taste </li>
+            </ul>
+<h3>Steps:</h3>
+    <ol>
+        <li>Place chicken, scallops, anchovies, shrimp, bonito flakes, half the ginger, and kombu in an electric pressure cooker. 
+            Add water; close and lock the lid. Select the Soup setting; set timer for 90 minutes according to manufacturer's instructions. Allow 10 to 15 minutes for pressure to build.</li>
+        <li>Release pressure using the natural-release method according to manufacturer's instructions, 10 to 40 minutes. 
+            Strain broth through a colander or fine-mesh sieve. Skim the fatty oil off the top of the broth.</li>
+        <li>Combine soy sauce, mirin, sake, green onions, bonito flakes, sugar, garlic, and kombu in a medium saucepan over high heat. Bring to a boil. 
+            Reduce heat to low and simmer until flavors blend, about 10 minutes. Strain tare sauce through a fine-mesh sieve into a bowl.</li>
+        <li>Pour 2 tablespoons of tare sauce into a large bowl. Ladle in about 2 cups of b
+            Add 1/6 of the ramen noodles. Repeat with remaining tare, broth, and ramen.</li>
+    </ol>
